<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitNow</string>
    <string name="logout">Çıkış yap</string>
    <string name="hidden">************</string>
    <string name="fill"> Lütfen Boş bırakmayınız</string>
    <string name="failed">Hatalı giriş</string>
    <string name="UIerror">UIstate unhandled:</string>
    <string name="passNotMatch">Şifreleriniz eşleşmiyor</string>

    <!---    Onboarding Strings     -->
    <string name="welcome_message">FitNow\'a hoşgeldiniz</string>
    <string name="btn_getstarted">Başlayalım</string>
    <string name="getstarted_firstfragtext">Vücudunuz bizimle daha güzel ve estetik duracak!</string>
    <string name="sec_screen_description">Yediğiniz yemekleri kayıt altına alıyoruz. Ayrıca günlük aldığınız besin miktarını ve kalori hesabınızı sizin için otomatik gerçekleştiriyoruz.</string>
    <string name="sec_screen_text_subject">Yediğiniz içtiğiniz bizde</string>
    <string name="sec_screen_btnnext">Sonraki</string>
    <string name="skip">Atla</string>
    <string name="first_screen_description">Uygulama sayesinde besin değerlerinizi ve almanız gereken besinleri takip etmek zorunda kalmayacaksınız.</string>
    <string name="third_screen_text_subject">Günlük analizinizin takibi artık çok kolay!</string>
    <string name="third_screen_description">Kullanıcı paneli\'nde bulunan adımsayar ve kalori takibi gibi özellikler sayesinde kafanız çok rahat olacak.</string>
    <string name="third_screen_btnnext">Başlayalım</string>
    <string name="btn_first_screen">Sonraki</string>

    <!---    loginFragment Strings     -->
    <string name="loginpagewelcomemessage">FitNow Giriş Ekranı</string>
    <string name="btngiris">Giriş Yap</string>
    <string name="loginPageSignUpText">Üye değil misin?</string>
    <string name="forgotPassword"> Şifremi Unuttum </string>
    <string name="passwordInput">Şifreniz</string>
    <string name="email">Email</string>


    <!---    Register fragment Strings     -->
    <string name="registerPageWelcomeMessage">FitNow Kayıt Ekranı</string>
    <string name="nameSurname">İsim Soyisim </string>
    <string name="signUp">Kayıt Ol</string>
    <string name="passwordAgain">Şifre Tekrarı</string>
    <string name="goBack">Geri Dön</string>
    <string name="username">Kullanıcı adı</string>
    <string name="password">Şifre(En az 6 karakter)</string>
    <string name="emailRegister">Email(**@*.com/tr/net vb.)</string>
    <string name="registerSuccess">Kayıt Başarılı. Lütfen giriş yapınız</string>

    <!---    forgotPassword dialog Strings     -->
    <string name="infoForgotPassword"> E-Mailinizi girip Gönder tuşuna basınız. </string>
    <string name="closeDialog">Kapat</string>
    <string name="sendMail">Gönder</string>


    <!---    profile fragment Strings     -->
    <string name="profileText">Profiliniz</string>
    <string name="boyTextView">Boyunuz:</string>
    <string name="yasTextView">Yaşınız:</string>
    <string name="kiloTextView">Kilonuz:</string>
    <string name="updateAccTextView">Lütfen hesap ayarlarına gidip bilgilerinizi güncelleyiniz</string>
    <string name="exerciseStatus">Egzersiz durumunuz</string>


    <!---    menu Strings     -->

    <string name="menuFastFoodBTN">Gıda</string>
    <string name="menuCalorieBTN">Sağlık</string>
    <string name="menuAccountBTN">Profil</string>
    <string name="menuFavoriteBTN">Favoriler</string>
    <string name="menuSettingsBTN">Ayarlar</string>
    <string name="mainMenuUpdateAcc">Mail/Şifre değiştir</string>
    <string name="mainMenuGoAccSettings">Hesap    Ayarlari</string>
    <string name="MainMenuVerifiedEmail">Email Onay durumu</string>
    <string name="MainMenuDeleteAccount">Hesabı sil</string>

    <!---    updateAcc Strings     -->
    <string name="update">Güncelle</string>
    <string name="changeMail">Mail değiştir</string>
    <string name="newPassText">Yeni şifreniz</string>
    <string name="saveString">Kaydet</string>
    <string name="enterPass">Lütfen şifrenizi giriniz</string>
    <string name="changePass">Şifre değiştir</string>
    <string name="emailPassNotSame">Email ile şifreniz uyuşmuyor, Lütfen tekrar deneyin</string>
    <string name="success">İşlem başarılı</string>


    <!---   settings strings     -->
    <string name="female">Kadın</string>
    <string name="male">Erkek</string>
    <string name="height">Boy giriniz</string>
    <string name="age">Yaşınızı giriniz</string>
    <string name="exercise">Haftada kaç kez egzersiz yapıyorsun?</string>
    <string name="job">Mesleğiniz</string>
    <string name="gender">Cinsiyetiniz</string>
    <string name="weight">Kilonuzu giriniz</string>
    <string name="heightHint">Örn. 170</string>
    <string name="ageHint">Örn. 20</string>
    <string name="exerciseHint">Örn. 3 Kez</string>
    <string name="jobHint">Örn. Doktor</string>
    <string name="weightHint">Örn. 75</string>
    <string name="updateSuccess">Güncelleme başarılı</string>
    <string name="updateFailed">İşlem başarısız.</string>

    <!---   fastfood fragment strings     -->
    <string name="search">Ara</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="watermelon">Watermelon</string>
    <string name="lemon">Lemon</string>
    <string name="add_favorite">Favoriye ekle</string>
    <string name="searchFood">Aramak istediğiniz gıda</string>
    <string name="cantFoundFood">Arama sonucunda bir şey bulunamadı</string>

    <!---   favorite fragment strings     -->
    <string name="haveNotFav">Favoriye herhangi bir şey eklemediniz.</string>
    <string name="favoritesBGText">Favorileriniz</string>

    <!---   healthy fragment strings     -->
    <string name="weak">Zayıfsınız, biraz daha düzgün beslenip kilo almanız sizin için daha güzel olur</string>
    <string name="normal">İdeal kilodasınız. Düzgün beslenmeye devam edin, en iyi vücüda sahip olabilirsiniz :)</string>
    <string name="normalplus">İdealin üstü kilodasınız, biraz çaba ile düzgün bir vücuda sahip olabilirsiniz</string>
    <string name="obez">Obezlik kilosundasınız, yeme içmenize çok daha fazla dikkat etmeniz gerekmekte!</string>
    <string name="megaobez">Kötü durumdasınız, tıbbi yardıma muhtaç durumdasınız. Kendinizi üzmeden en yakın sağlık kuruluşundan yardım isteyiniz</string>
    <string name="badentry">Düzgün veri girişi yapmanızı rica ederim</string>
    <string name="inputHealth">Vücut kitle endeksinizi hesaplamamız için hesap ayarlarına gidip bilgilerinizi güncellemeniz gerekmektedir.</string>
    <string name="weight_height_index">Boy/Kilo Endeksi</string>
    <string name="healthyMenuName">Sağlık</string>
    <string name="healthyBGText">Saglik Durumunuz</string>
    <string name="newEmailText">Yeni Epostanız</string>
    <string name="extraSettings">Ekstra Ayarlar</string>


    <!---    Finish     -->


</resources>