<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/profileText" />
    <item
        android:id="@+id/foodFragment"
        android:icon="@drawable/ic_fastfood"
        android:title="@string/menuFastFoodBTN" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menuFavoriteBTN" />
    <item
        android:id="@+id/healthyFragment"
        android:icon="@drawable/ic_calorie"
        android:title="@string/weight_height_index" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/menuSettingsBTN" />
</menu>