<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >

    <item
        android:id="@+id/menuHesapAyarlari"
        android:icon="@drawable/ic_settings"
        android:title="@string/mainMenuGoAccSettings"/>

        <item
            android:id="@+id/extraSettings"
            android:icon="@drawable/ic_account"
            android:title="@string/extraSettings"/>
    <item
        android:id="@+id/emailOnayla"
        android:icon="@drawable/ic_verified_email"
        android:title="@string/MainMenuVerifiedEmail"/>
        <item
            android:id="@+id/deleteAccount"
            android:icon="@drawable/ic_delete_garbage"
            android:title="@string/MainMenuDeleteAccount"/>
    <item
        android:id="@+id/menuCikisYap"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"/>

    </group>
</menu>