<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.user.UserinformationActivity">

            <EditText
                android:id="@+id/ui_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/ageHint"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/ui_height" />

            <EditText
                android:id="@+id/ui_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/jobHint"
                app:layout_constraintStart_toStartOf="@+id/ui_weight"
                app:layout_constraintTop_toBottomOf="@+id/ui_weight" />

            <EditText
                android:id="@+id/ui_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/heightHint"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/ui_age"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:text="@string/age"
                app:layout_constraintBottom_toBottomOf="@+id/ui_age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ui_age"
                app:layout_constraintVertical_bias="0.461" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/exercise"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/uispinner_exercise" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job"
                app:layout_constraintBottom_toBottomOf="@+id/ui_job"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/ui_job" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                app:layout_constraintBottom_toBottomOf="@+id/ui_height"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/ui_height" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                app:layout_constraintBottom_toBottomOf="@+id/genderRadioGroup"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/genderRadioGroup" />


            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="164dp"
                android:layout_height="65dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/uispinner_exercise"
                app:layout_constraintStart_toStartOf="@+id/uispinner_exercise"
                app:layout_constraintTop_toBottomOf="@+id/uispinner_exercise">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="90dp"
                    android:layout_height="32dp"
                    android:checked="true"
                    android:text="@string/male"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="90dp"
                    android:layout_height="32dp"
                    android:text="@string/female"
                    android:textSize="16sp" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/saveString"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                app:layout_constraintBottom_toBottomOf="@+id/ui_weight"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/ui_weight" />

            <EditText
                android:id="@+id/ui_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/weightHint"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/ui_age"
                app:layout_constraintTop_toBottomOf="@+id/ui_age" />

            <Spinner
                android:id="@+id/uispinner_exercise"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/ui_job"
                app:layout_constraintTop_toBottomOf="@+id/ui_job" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>