<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.user.ForgotPasswordFragment">


    <TextView
        android:id="@+id/aboutFragmentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoForgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <EditText
        android:id="@+id/emailForgot"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutFragmentTextView" />

    <Button
        android:id="@+id/sendLink"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sendMail"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/emailForgot"
        app:layout_constraintTop_toBottomOf="@+id/emailForgot" />

    <Button
        android:id="@+id/closeFragment"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:text="@string/closeDialog"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/sendLink"
        app:layout_constraintStart_toStartOf="@+id/emailForgot"
        app:layout_constraintTop_toTopOf="@+id/sendLink" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>