<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.onBoarding.screens.FirstScreen">

    <TextView
        android:id="@+id/firstScreen_subject"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/getstarted_firstfragtext"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/first_screen_imagevw"
        app:layout_constraintStart_toStartOf="@+id/first_screen_imagevw"
        app:layout_constraintTop_toBottomOf="@+id/first_screen_imagevw" />

    <ImageView
        android:id="@+id/first_screen_imagevw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/appintro1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstScreen_welcomeTv"
        app:layout_constraintVertical_bias="0.09"
        />

    <Button
        android:id="@+id/btn_getstarted"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_first_screen"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/firstscreen_description"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/first_screen_description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/firstScreen_subject"
        app:layout_constraintStart_toStartOf="@+id/firstScreen_subject"
        app:layout_constraintTop_toBottomOf="@+id/firstScreen_subject" />

    <TextView
        android:id="@+id/first_screen_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/skip"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_getstarted" />

    <TextView
        android:id="@+id/firstScreen_welcomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_message"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>